--- a/html/iletisim.html
+++ b/html/iletisim.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/index.css"><!--css -->
+    <link rel="stylesheet" href="/css/style.css"><!--css -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&family=Poppins:wght@100;300;400;500;600&display=swap" rel="stylesheet"><!--font-->
     <title>Kişisel Web Sitesi</title>
 </head>
@@ -25,5 +25,22 @@
             </ul>
         </div>
     </header>
+    <section id="iletisim">
+        <div class="section_title">
+            <h2>İletişime Geç</h2>
+        </div>
+        <div class="inner_contact">
+            <div class="child_contact">
+                <form action="#">
+                    <input placeholder="İsim" type="text" name="fullname" id="">
+                    <input placeholder="E-mail" type="text" name="fullname" id="">
+                    <textarea placeholder="Mesaj" name="Mesaj" id="" cols="30" rows="10"></textarea>
+                    
+
+                </form>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
