--- a/html/iletisim.html
+++ b/html/iletisim.html
@@ -35,8 +35,8 @@
                     <input placeholder="İsim" type="text" name="fullname" id="">
                     <input placeholder="E-mail" type="text" name="fullname" id="">
                     <textarea placeholder="Mesaj" name="Mesaj" id="" cols="30" rows="10"></textarea>
-                    
-
+                    <input type="submit" value="Gönder">
+                    <input type="reset" value="Temizle">
                 </form>
             </div>
         </div>
