--- a/html/miras.html
+++ b/html/miras.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css"><!--css -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&family=Poppins:wght@100;300;400;500;600&display=swap" rel="stylesheet"><!--font-->
-    <title>Kişisel Web Sitesi</title>
+    <title>Mirasımız</title>
 </head>
 <body>
     <header>
