--- a/html/sehrim.html
+++ b/html/sehrim.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css"><!--css -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&family=Poppins:wght@100;300;400;500;600&display=swap" rel="stylesheet"><!--font-->
-    <title>Kişisel Web Sitesi</title>
+    <title>Şehrim</title>
 </head>
 <body>
     <header>
@@ -76,20 +76,24 @@
             <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/image/akhisar.png" class="d-block w-100" alt="first"  height="">
+                <a href="sehrim.html"><img src="/image/akhisar.png" class="d-block w-100" alt="first"  height=""></a>
               </div>
               <div class="carousel-item">
-                <img src="/image/belediye2.png" class="d-block w-100" alt="second" height="">
+                <a href="golet.html"><img src="/image/golet2.png" class="d-block w-100" alt="second" height=""></a>
               </div>
               <div class="carousel-item">
-                <img src="/image/tepe9.jpg" class="d-block w-100" alt="third" height="">
+                <a href="miras.html"><img src="/image/tepe9.jpg" class="d-block w-100" alt="third" height=""></a>
                 
               </div>
+              
               <div class="carousel-item">
-                <img src="/image/golet.png" class="d-block w-100" alt="third" height="">
+                <a href="kutuphane.html"><img src="/image/Screenshot_3.png" class="d-block w-100" alt="third" height=""></a>
               </div>
               <div class="carousel-item">
-                <img src="/image/golet2.png" class="d-block w-100" alt="third" height="">
+                <a href="sinema.html"><img src="/image/tayyare.jpg" class="d-block w-100" alt="third" height=""></a>
+              </div>
+              <div class="carousel-item">
+                <a href="kaya.html"><img src="/image/sahin.png" class="d-block w-100" alt="third" height=""></a>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
