--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css"><!--css -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&family=Poppins:wght@100;300;400;500;600&display=swap" rel="stylesheet"><!--font-->
-    <title>Kişisel Web Sitesi</title>
+    <title>Hakkımda</title>
 </head>
 <body>
     <!-- ************HEADER******** -->
     <header>
         <div class="navbar">
             <div class="logo">
-
                 <h2><a href="#">Emir Vardar</a></h2>
             </div>
             <div onclick="showNavbar()" class="burger">
@@ -24,24 +23,23 @@
                     <rect y="60" width="100" height="20"></rect>
                   </svg>
             </div>
-
             <ul class="nav_links">
-                <li><a href="/html/index.html">Hakkımda</a></li>
-                <li><a href="/html/cv.html">Öz Geçmiş</a></li>
-                <li><a href="/html/sehrim.html">Şehrim</a></li>
-                <li><a href="/html/miras.html">Mirasımız</a></li>
-                <li><a href="/html/hobi.html">Hobilerim</a></li>
-                <li><a href="/html/iletisim.html">İletişim</a></li>
-                <li><a href="/html/login.html">Giriş Yap</a></li>
+                <li><a href="index.html">Hakkımda</a></li>
+                <li><a href="cv.html">Öz Geçmiş</a></li>
+                <li><a href="sehrim.html">Şehrim</a></li>
+                <li><a href="miras.html">Mirasımız</a></li>
+                <li><a href="hobi.html">Hobilerim</a></li>
+                <li><a href="iletisim.html">İletişim</a></li>
+                <li><a href="login.html">Giriş Yap</a></li>
             </ul>
             <div id="show" class="responsiveNav">
-                <a href="/html/index.html">Hakkımda</a>
-                <a href="/html/cv.html">Öz Geçmiş</a>
-                <a href="/html/sehrim.html">Şehrim</a>
-                <a href="/html/miras.html">Mirasımız</a>
-                <a href="/html/hobi.html">Hobilerim</a>
-                <a href="/html/iletisim.html">İletişim</a>
-                <a href="/html/login.html">Giriş Yap</a>
+                <a href="index.html">Hakkımda</a>
+                <a href="cv.html">Öz Geçmiş</a>
+                <a href="sehrim.html">Şehrim</a>
+                <a href="miras.html">Mirasımız</a>
+                <a href="hobi.html">Hobilerim</a>
+                <a href="iletisim.html">İletişim</a>
+                <a href="login.html">Giriş Yap</a>
             <span onclick="noneNavbar()" class="closeButton">
                 <svg width="40" height="40"viewPort="0 0 12 12" version="1.1"
                     xmlns="http://www.w3.org/2000/svg">
@@ -67,9 +65,7 @@
 
 
             </script>
-
         </div>
-
     </header>
     <!-- **********ANASAYFA******* -->
     <section id="anasayfa">
